--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fortunetrack",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,8 +14,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "expressjs": "^1.0.1",
     "jsonwebtoken": "^9.0.2"
   }
 }
