--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "expressjs": "^1.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "google-trends-api": "^4.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "twitter-api-v2": "^1.17.2"
   }
 }
