--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expressjs": "^1.0.1",
     "google-trends-api": "^4.9.2",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.0",
     "twitter-api-v2": "^1.17.2"
   }
 }
