--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "google-trends-api": "^4.9.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
+    "node-cron": "^3.0.3",
     "twitter-api-v2": "^1.17.2"
   }
 }
