--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "register-service-worker": "^1.7.2",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.14.0",
+    "toastify-js": "^1.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
