--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "register-service-worker": "^1.7.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.14.0",
+    "toastify": "^2.0.1",
     "toastify-js": "^1.12.0",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
+    "vue3-toastify": "^0.2.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
