--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,7 +2,7 @@ name: Cron Job
 
 on:
   schedule:
-    - cron: 0 */2 * * *
+    - cron: '0 */2 * * *' # Runs every 2 hours
 
 jobs:
   cron:
@@ -10,12 +10,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+
       - name: Install dependencies
         run: npm install
+
       - name: Run cron script
         run: node cron.js
         env:
