--- a/.github/workflows/update_food-and-beverages.yml
+++ b/.github/workflows/update_food-and-beverages.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 */2 * * *'
 
 jobs:
-  update_retail:
+  update_food-and-beverages:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
