--- a/.github/workflows/update_retail.yml
+++ b/.github/workflows/update_retail.yml
@@ -2,7 +2,6 @@ name: Update Retail Data
 
 on:
   schedule:
-    # This cron job will run every 2 hours
     - cron: '0 */2 * * *'
 
 jobs:
@@ -15,12 +14,20 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20.18.0' # Specify the Node.js version you want to use
+          node-version: '20.18.0'
 
       - name: Install dependencies
         run: |
           npm install
-          # If you have any additional setup commands, add them here
+
+      - name: Test Database Connection
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y netcat
+          nc -zv $HOST_DB $PORT
+        env:
+          HOST_DB: ${{ secrets.HOST_DB }}
+          PORT: ${{ secrets.PORT }}
 
       - name: Run updateRetail.js
         run: node updateRetail.js
@@ -31,3 +38,4 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           PORT: ${{ secrets.PORT }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          API_KEY: ${{ secrets.API_KEY }}
