--- a/.github/workflows/update_healthcare.yml
+++ b/.github/workflows/update_healthcare.yml
@@ -31,3 +31,4 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           PORT: ${{ secrets.PORT }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          HEALTHCARE_KEY: ${{ secrets.HEALTHCARE_KEY }}
