--- a/.github/workflows/update_food-and-beverages.yml
+++ b/.github/workflows/update_food-and-beverages.yml
@@ -31,3 +31,4 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           PORT: ${{ secrets.PORT }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          FOOD_KEY: ${{ secrets.FOOD_KEY }}
