--- a/.github/workflows/update_retail.yml
+++ b/.github/workflows/update_retail.yml
@@ -38,4 +38,4 @@ jobs:
           DB_NAME: ${{ secrets.DB_NAME }}
           PORT: ${{ secrets.PORT }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          API_KEY: ${{ secrets.API_KEY }}
+          RETAIL_KEY: ${{ secrets.RETAIL_KEY }}
